# pyjlyric

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  TODO.md  cspell.json  index.html  mise.toml  pyjlyric.html  pyproject.toml  search.js
.github/workflows/: release.yml  test.yml
pyjlyric/: __init__.py  base.py  main.py  model.py  models.py  parse.html  parse.py  util.py  utils.py
pyjlyric/animap/: __init__.py  model.py  parser.py
pyjlyric/evesta/: __init__.py  model.py  parser.py
pyjlyric/gakki/: __init__.py  model.py  parser.py
pyjlyric/hoick/: __init__.py  model.py  parser.py
pyjlyric/jlyric/: __init__.py  model.py  parser.py
pyjlyric/joysound/: __init__.py  model.py  parser.py
pyjlyric/jtotal/: __init__.py  model.py  parser.py
pyjlyric/kashinavi/: __init__.py  model.py  models.py  parser.py
pyjlyric/linkcore/: __init__.py  model.py  parser.py
pyjlyric/musicbook/: __init__.py  model.py  parser.py
pyjlyric/petitlyrics/: __init__.py  model.py  parser.py
pyjlyric/utamap/: __init__.py  model.py  parser.py
pyjlyric/utanet/: __init__.py  model.py  parser.py
pyjlyric/utaten/: __init__.py  model.py  parser.py
tests/: test_pyjlyric.py
