[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling", "uv-dynamic-versioning" ]

[project]
name = "pyjlyric"
description = "Japanese Lyric Aggregator"
readme = "README.md"
keywords = [
  "download-lyrics",
  "japanese",
  "japanese-songs",
  "lyrics",
  "lyrics-scraping",
]
license = { text = "MIT" }
authors = [ { name = "eggplants", email = "w10776e8w@yahoo.co.jp" } ]
requires-python = ">=3.10,<4"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Typing :: Typed",
]
dynamic = [ "version" ]
dependencies = [
  "beautifulsoup4>=4.12.3,<5",
  "chardet>=5.2,<6",
  "eval-type-backport>=0.2.2,<0.3; python_version<'3.10'",
  "lxml>=5.3,<7",
  "pydantic>=2.10.5,<3",
  "requests>=2.32.3,<3",
  "typing-extensions>=4.12.2,<5",
]

urls.Repository = "https://github.com/eggplants/pyjlyric"
scripts.jrc = "pyjlyric.main:main"

[dependency-groups]
dev = [
  "pymarkdownlnt>=0.9.33",
  "pyproject-fmt>=2.11.1",
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3",
  "pytest-cov>=7",
]
docs = [
  "pdoc>=16",
]

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.targets.sdist]
include = [ "pyjlyric" ]

[tool.hatch.build.targets.wheel]
include = [ "pyjlyric" ]

[tool.uv]
preview = true
default-groups = [
  "dev",
  "docs",
]
exclude-newer = "P7D"

[tool.ruff]
line-length = 120
format.indent-style = "space"
format.quote-style = "double"
lint.select = [
  "ALL",
]
lint.ignore = [
  "COM812",
  "D",
]
lint.per-file-ignores."tests/test_*.py" = [
  "S101", #  Use of assert detected
]
lint.mccabe.max-complexity = 11

lint.pydocstyle.convention = "google"

[tool.uv-dynamic-versioning]
vcs = "git"
style = "semver"
fallback-version = "0.0.0"
